feat: add socials list

--- a/index.html
+++ b/index.html
@@ -51,7 +51,17 @@
                         </div>
                     </div>
                     <div class="header__socials socials">
-
+                        <ul class="socials-list">
+                            <div class="social-container">
+                                <a href="#" class="social-ico ico-facebook"></a>
+                            </div>
+                            <div class="social-container">
+                                <a href="#" class="social-ico ico-twitter"></a>
+                            </div>
+                            <div class="social-container">
+                                <a href="#" class="social-ico ico-instagram"></a>
+                            </div>
+                        </ul>
                     </div>
                 </div>
                 <div class="arrow-button">
