refactor: minor edits in constants and index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="wrapper">
                 <div class="intro__lines"></div>
                 <div class="intro__header layout-3-columns">
-                    <div class="header__working-hours">
+                    <div class="working-hours">
                         <p>Mon - Fri: 8PM - 10PM, Sat - Sun: 8PM - 3AM</p>
                     </div>
                     <div class="header__main-title">
