feat: add normalize file

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
                         <div class="frame"></div>
                     </div>
                 </div>
+                <div class="working-hours">
+                    <p>Mon - Fri: <span>8PM - 10PM</span>, Sat - Sun: <span>8PM - 3AM, Phone: +40 729 131 637/+40 726 458 782</span></p>
+                </div>
             </div>
         </section>
         <section class="section specialties">
