feat: start implementing sections' layout

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
         </section>
         <section class="section about-us">
-            <div class="wrapper">
+            <div class="wrapper section-layout">
                 <div class="layout-2-columns">
                     <div class="about-us__description description">
                         <h2 class="section-header">About us</h2>
@@ -114,7 +114,7 @@
             </div>
         </section>
         <section class="section our-team">
-            <div class="wrapper">
+            <div class="wrapper section-layout">
                 <div class="subtitle-container">
                     <h4 class="subtitle">Our Team</h4>
                 </div>
@@ -135,7 +135,7 @@
             </div>
         </section>
         <section class="section book-a-table">
-            <div class="wrapper">
+            <div class="wrapper section-layout">
                 <div class="layout-2-columns">
                     <div class="book-a-table__book-form form-section">
                         <h2 class="section-header">Book a table</h2>
@@ -175,7 +175,7 @@
             </div>
         </section>
         <section class="section specialties">
-            <div class="wrapper">
+            <div class="wrapper section-layout">
                 <div class="subtitle-container">
                     <h4 class="subtitle">Specialties</h4>
                 </div>
@@ -209,7 +209,7 @@
             </div>
         </section>
         <section class="section menu">
-            <div class="wrapper">
+            <div class="wrapper section-layout">
                 <div class="about-us__description description">
                     <h2 class="section-header">Delicious menu</h2>
                     <div class="header-divider"></div>
@@ -240,7 +240,7 @@
             </div>
         </section>
         <section class="section private-events">
-            <div class="wrapper">
+            <div class="wrapper section-layout">
                 <div class="subtitle-container">
                     <h4 class="subtitle">Private Events</h4>
                 </div>
@@ -250,7 +250,6 @@
                             <div class="img-container">
                                 <img src="/src/assets/img/section-images/about-us.png" alt="" class="section-img">
                             </div>
-                            <div class="frame"></div>
                             <div class="event__name"><p>Weddings</p></div>
                         </div>
                     </div>
@@ -259,7 +258,6 @@
                             <div class="img-container">
                                 <img src="/src/assets/img/section-images/about-us.png" alt="" class="section-img">
                             </div>
-                            <div class="frame"></div>
                             <div class="event__name"><p>Corporate parties</p></div>
                         </div>
                     </div>
@@ -270,7 +268,7 @@
             </div>
         </section>
         <section class="section gallery">
-            <div class="wrapper">
+            <div class="wrapper section-layout">
                 <div class="gallery__carousel carousel">
                     <div class="carousel-slides gallery-slides">
                         <div class="slide gallery-slide">
@@ -292,7 +290,7 @@
             </div>
         </section>
         <section class="section contact">
-            <div class="wrapper">
+            <div class="wrapper section-layout">
                 <div class="contact__contact-form form-section">
                     <h2 class="section-header">Contact</h2>
                     <form action="post" class="contact-form form">
