feat: implement layouts of first 3 sections and forms

--- a/index.html
+++ b/index.html
@@ -108,12 +108,13 @@
                         <div class="img-container">
                             <img src="/src/assets/img/section-images/about-us.png" alt="" class="section-img">
                         </div>
+                        
                         <div class="frame"></div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="section our-team">
+        <section class="section alter-section our-team">
             <div class="wrapper section-layout">
                 <div class="subtitle-container">
                     <h4 class="subtitle">Our Team</h4>
@@ -121,7 +122,7 @@
                 <div class="layout-2-columns">
                     <div class="img-block">
                         <div class="img-container">
-                            <img src="/src/assets/img/section-images/about-us.png" alt="" class="section-img">
+                            <img src="/src/assets/img/section-images/our-team.png" alt="" class="section-img">
                         </div>
                         <div class="frame"></div>
                     </div>
@@ -139,15 +140,16 @@
                 <div class="layout-2-columns">
                     <div class="book-a-table__book-form form-section">
                         <h2 class="section-header">Book a table</h2>
+                        <div class="header-divider"></div>
                         <form action="post" class="book-form form">
-                            <div class="row">
+                            <div class="row layout-2-columns columns-row">
                                 <input type="text" class="input" name="Name" placeholder="Name" required>
                                 <input type="email" class="input" name="Email" placeholder="Email" required>
                             </div>
-                            <div class="row">
+                            <div class="row layout-2-columns columns-row">
                                 <input type="tel" class="input" placeholder="Phone" required>
-                                <select name="People" class="input" required>
-                                    <option value="People" selected disabled>People</option>
+                                <select name="People" class="input select-input" required>
+                                    <option value="0" class="option" selected disabled>People</option>
                                     <option value="1" class="option">1</option>
                                     <option value="2" class="option">2</option>
                                     <option value="3" class="option">3</option>
@@ -155,7 +157,7 @@
                                     <option value="5" class="option">5</option>
                                 </select>
                             </div>
-                            <div class="row">
+                            <div class="row layout-2-columns columns-row">
                                 <input type="date" class="input date-input" name="Date" required>
                                 <input type="time" class="input time-input" name="Time" required>
                             </div>
@@ -174,18 +176,18 @@
                 </div>
             </div>
         </section>
-        <section class="section specialties">
+        <section class="section alter-section specialties">
             <div class="wrapper section-layout">
                 <div class="subtitle-container">
                     <h4 class="subtitle">Specialties</h4>
                 </div>
                 <div class="specialties__carousel carousel">
-                    <div class="carousel-slides specialties-slides">
-                        <div class="carousel-slide specialties-slide">
+                    <div class="carousel-slides specialties__slides">
+                        <div class="carousel-slide specialties__slide">
                             <div class="layout-2-columns">
                                 <div class="img-block">
                                     <div class="img-container">
-                                        <img src="/src/assets/img/section-images/about-us.png" alt="" class="section-img">
+                                        <img src="/src/assets/img/section-images/specialties.png" alt="" class="section-img">
                                     </div>
                                     <div class="frame"></div>
                                 </div>
@@ -198,8 +200,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-controls specialties-controls">
-                        <div class="controls-container specialties-controls-container">
+                    <div class="carousel-controls specialties__controls">
+                        <div class="controls-container specialties__controls-container">
                             <button class="control specialties-control"></button>
                             <button class="control specialties-control"></button>
                             <button class="control specialties-control"></button>
@@ -270,20 +272,20 @@
         <section class="section gallery">
             <div class="wrapper section-layout">
                 <div class="gallery__carousel carousel">
-                    <div class="carousel-slides gallery-slides">
-                        <div class="slide gallery-slide">
+                    <div class="carousel-slides gallery__slides">
+                        <div class="slide gallery__slide">
                             <div class="layout-4-columns">
-                                <img src="/src/assets/img/section-images/about-us.png" alt="" class="gallery-img">
-                                <img src="/src/assets/img/section-images/about-us.png" alt="" class="gallery-img">
-                                <img src="/src/assets/img/section-images/about-us.png" alt="" class="gallery-img">
-                                <img src="/src/assets/img/section-images/about-us.png" alt="" class="gallery-img">
+                                <img src="/src/assets/img/gallery-carousel/gallery-1.png" alt="" class="gallery-img">
+                                <img src="/src/assets/img/gallery-carousel/gallery-2.png" alt="" class="gallery-img">
+                                <img src="/src/assets/img/gallery-carousel/gallery-3.png" alt="" class="gallery-img">
+                                <img src="/src/assets/img/gallery-carousel/gallery-4.png" alt="" class="gallery-img">
                             </div>
                         </div>
                     </div>
                     <div class="carousel-controls gallery-controls">
                         <div class="controls-container gallery-controls-container">
-                            <button class="control gallery-control"></button>
-                            <button class="control gallery-control"></button>
+                            <button class="control gallery__control"></button>
+                            <button class="control gallery__control"></button>
                         </div>
                     </div>
                 </div>
