feat: implement navigation on navlinks click

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
                 <ul class="navbar__list layout-2-columns">
                     <li class="list-column">
                         <ul class="navbar__links">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Team</a></li>
-                            <li><a href="#">Booking</a></li>
+                            <li><a class="navbar__link" href="#intro">Home</a></li>
+                            <li><a class="navbar__link" href="#about">About</a></li>
+                            <li><a class="navbar__link" href="#team">Team</a></li>
+                            <li><a class="navbar__link" href="#booking">Booking</a></li>
                         </ul>
                     </li>
                     <li class="list-column">
                         <ul class="navbar__links links-right">
-                            <li><a href="#">Menu</a></li>
-                            <li><a href="#">Gallery</a></li>
-                            <li><a href="#">Events</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a class="navbar__link" href="#menu">Menu</a></li>
+                            <li><a class="navbar__link" href="#gallery">Gallery</a></li>
+                            <li><a class="navbar__link" href="#events">Events</a></li>
+                            <li><a class="navbar__link" href="#contact">Contact</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -49,7 +49,7 @@
         </div>
     </header>
     <main>
-        <section class="section intro">
+        <section class="section intro" id="intro">
             <div class="wrapper">
                 <div class="intro__lines"></div>
                 <div class="intro__header layout-3-columns">
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                     <div class="header__socials socials header__column">
-                        <ul class="socials-list">
+                        <ul class="socials-list header__socials-list">
                             <a href="#" class="social-ico-ref">
                                 <div class="svg-container svg-container_facebook">
                                     <svg width="12" height="21" viewBox="0 0 12 21" fill="none"
@@ -116,7 +116,7 @@
                 </div>
             </div>
         </section>
-        <section class="section about-us">
+        <section class="section about-us" id="about">
             <div class="wrapper">
                 <div class="layout-2-columns block-layout">
                     <div class="about-us__description description">
@@ -138,7 +138,7 @@
                 </div>
             </div>
         </section>
-        <section class="section alter-section our-team">
+        <section class="section alter-section our-team" id="team">
             <div class="wrapper">
                 <div class="subtitle-container">
                     <h4 class="subtitle">Our Team</h4>
@@ -163,7 +163,7 @@
                 </div>
             </div>
         </section>
-        <section class="section book-a-table">
+        <section class="section book-a-table" id="booking">
             <div class="wrapper">
                 <div class="layout-2-columns block-layout">
                     <div class="book-a-table__book-form form-section">
@@ -240,7 +240,7 @@
                 </div>
             </div>
         </section>
-        <section class="section menu">
+        <section class="section menu" id="menu">
             <div class="wrapper">
                 <div class="about-us__description description">
                     <h2 class="section-header">Delicious menu</h2>
@@ -272,7 +272,7 @@
                 </div>
             </div>
         </section>
-        <section class="section private-events">
+        <section class="section private-events" id="events">
             <div class="wrapper">
                 <div class="subtitle-container">
                     <h4 class="subtitle">Private Events</h4>
@@ -310,7 +310,7 @@
                 </div>
             </div>
         </section>
-        <section class="section gallery">
+        <section class="section gallery" id="gallery">
             <div class="wrapper gallery__wrapper">
                 <div class="layout-4-columns gallery-layout">
                     <div class="gallery__block">
@@ -333,7 +333,7 @@
             </div>
         </div>
         </section>
-        <section class="section contact">
+        <section class="section contact" id="contact">
             <div class="wrapper">
                 <div class="contact__contact-form form-section">
                     <div class="about-us__description description">
