--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/vendors/Bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="src/sass/main.css">
     <title>Restaurant</title>
 </head>
@@ -322,6 +322,78 @@
                             <p>55,68 USD</p>
                         </div>
                     </div>
+                    <div class="cell layout-2-columns">
+                        <div class="cell__name">
+                            <h5 class="cell__title">PIZZA QUATRO STAGIONI</h5>
+                            <p class="cell__subtitle">Integer ullamcorper neque eu purus euismo</p>
+                        </div>
+                        <div class="cell__price">
+                            <p>55,68 USD</p>
+                        </div>
+                    </div>
+                    <div class="cell layout-2-columns">
+                        <div class="cell__name">
+                            <h5 class="cell__title">PIZZA QUATRO STAGIONI</h5>
+                            <p class="cell__subtitle">Integer ullamcorper neque eu purus euismo</p>
+                        </div>
+                        <div class="cell__price">
+                            <p>55,68 USD</p>
+                        </div>
+                    </div>
+                    <div class="cell layout-2-columns">
+                        <div class="cell__name">
+                            <h5 class="cell__title">PIZZA QUATRO STAGIONI</h5>
+                            <p class="cell__subtitle">Integer ullamcorper neque eu purus euismo</p>
+                        </div>
+                        <div class="cell__price">
+                            <p>55,68 USD</p>
+                        </div>
+                    </div>
+                    <div class="cell layout-2-columns">
+                        <div class="cell__name">
+                            <h5 class="cell__title">PIZZA QUATRO STAGIONI</h5>
+                            <p class="cell__subtitle">Integer ullamcorper neque eu purus euismo</p>
+                        </div>
+                        <div class="cell__price">
+                            <p>55,68 USD</p>
+                        </div>
+                    </div>
+                    <div class="cell layout-2-columns">
+                        <div class="cell__name">
+                            <h5 class="cell__title">PIZZA QUATRO STAGIONI</h5>
+                            <p class="cell__subtitle">Integer ullamcorper neque eu purus euismo</p>
+                        </div>
+                        <div class="cell__price">
+                            <p>55,68 USD</p>
+                        </div>
+                    </div>
+                    <div class="cell layout-2-columns">
+                        <div class="cell__name">
+                            <h5 class="cell__title">PIZZA QUATRO STAGIONI</h5>
+                            <p class="cell__subtitle">Integer ullamcorper neque eu purus euismo</p>
+                        </div>
+                        <div class="cell__price">
+                            <p>55,68 USD</p>
+                        </div>
+                    </div>
+                    <div class="cell layout-2-columns">
+                        <div class="cell__name">
+                            <h5 class="cell__title">PIZZA QUATRO STAGIONI</h5>
+                            <p class="cell__subtitle">Integer ullamcorper neque eu purus euismo</p>
+                        </div>
+                        <div class="cell__price">
+                            <p>55,68 USD</p>
+                        </div>
+                    </div>
+                    <div class="cell layout-2-columns">
+                        <div class="cell__name">
+                            <h5 class="cell__title">PIZZA QUATRO STAGIONI</h5>
+                            <p class="cell__subtitle">Integer ullamcorper neque eu purus euismo</p>
+                        </div>
+                        <div class="cell__price">
+                            <p>55,68 USD</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -435,8 +507,8 @@
         <p class="copyright">© Gleb Bayeshko 2020</p>
     </footer>
 </body>
-<script src="./src/vendors/jQuery/jQuery.js"></script>
-<script src="./src/vendors/Bootstrap/bootstrap.bundle.min.js"></script>
-<script src="./dist/main.js"></script>
-
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<script src="./build/scripts/main.js"></script>
 </html>
