--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         </section>
         <section class="section menu" id="menu">
             <div class="wrapper">
-                <div class="about-us__description description">
+                <div class="menu__description description">
                     <h2 class="section-header">Delicious menu</h2>
                     <div class="header-divider"></div>
                     <p class="section-subheader">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at velit
@@ -302,7 +302,7 @@
                 </div>
                 <div class="menu__nav-container">
                     <ul class="menu__nav">
-                        <li>Pizza</li>
+                        <li class="menu__link_active">Pizza</li>
                         <li>Soup</li>
                         <li>Pasta</li>
                         <li>Desert</li>
@@ -312,87 +312,6 @@
                     </ul>
                 </div>
                 <div class="menu__table layout-3-columns">
-                    <div class="cell layout-2-columns">
-                        <div class="cell__name">
-                            <h5 class="cell__title">PIZZA QUATRO STAGIONI</h5>
-                            <p class="cell__subtitle">Integer ullamcorper neque eu purus euismo</p>
-                        </div>
-                        <div class="cell__price">
-                            <p>55,68 USD</p>
-                        </div>
-                    </div>
-                    <div class="cell layout-2-columns">
-                        <div class="cell__name">
-                            <h5 class="cell__title">PIZZA QUATRO STAGIONI</h5>
-                            <p class="cell__subtitle">Integer ullamcorper neque eu purus euismo</p>
-                        </div>
-                        <div class="cell__price">
-                            <p>55,68 USD</p>
-                        </div>
-                    </div>
-                    <div class="cell layout-2-columns">
-                        <div class="cell__name">
-                            <h5 class="cell__title">PIZZA QUATRO STAGIONI</h5>
-                            <p class="cell__subtitle">Integer ullamcorper neque eu purus euismo</p>
-                        </div>
-                        <div class="cell__price">
-                            <p>55,68 USD</p>
-                        </div>
-                    </div>
-                    <div class="cell layout-2-columns">
-                        <div class="cell__name">
-                            <h5 class="cell__title">PIZZA QUATRO STAGIONI</h5>
-                            <p class="cell__subtitle">Integer ullamcorper neque eu purus euismo</p>
-                        </div>
-                        <div class="cell__price">
-                            <p>55,68 USD</p>
-                        </div>
-                    </div>
-                    <div class="cell layout-2-columns">
-                        <div class="cell__name">
-                            <h5 class="cell__title">PIZZA QUATRO STAGIONI</h5>
-                            <p class="cell__subtitle">Integer ullamcorper neque eu purus euismo</p>
-                        </div>
-                        <div class="cell__price">
-                            <p>55,68 USD</p>
-                        </div>
-                    </div>
-                    <div class="cell layout-2-columns">
-                        <div class="cell__name">
-                            <h5 class="cell__title">PIZZA QUATRO STAGIONI</h5>
-                            <p class="cell__subtitle">Integer ullamcorper neque eu purus euismo</p>
-                        </div>
-                        <div class="cell__price">
-                            <p>55,68 USD</p>
-                        </div>
-                    </div>
-                    <div class="cell layout-2-columns">
-                        <div class="cell__name">
-                            <h5 class="cell__title">PIZZA QUATRO STAGIONI</h5>
-                            <p class="cell__subtitle">Integer ullamcorper neque eu purus euismo</p>
-                        </div>
-                        <div class="cell__price">
-                            <p>55,68 USD</p>
-                        </div>
-                    </div>
-                    <div class="cell layout-2-columns">
-                        <div class="cell__name">
-                            <h5 class="cell__title">PIZZA QUATRO STAGIONI</h5>
-                            <p class="cell__subtitle">Integer ullamcorper neque eu purus euismo</p>
-                        </div>
-                        <div class="cell__price">
-                            <p>55,68 USD</p>
-                        </div>
-                    </div>
-                    <div class="cell layout-2-columns">
-                        <div class="cell__name">
-                            <h5 class="cell__title">PIZZA QUATRO STAGIONI</h5>
-                            <p class="cell__subtitle">Integer ullamcorper neque eu purus euismo</p>
-                        </div>
-                        <div class="cell__price">
-                            <p>55,68 USD</p>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
@@ -456,7 +375,7 @@
         <section class="section contact" id="contact">
             <div class="wrapper">
                 <div class="contact__contact-form form-section">
-                    <div class="about-us__description description">
+                    <div class="contact__description description">
                         <h2 class="section-header">Contact</h2>
                         <div class="header-divider"></div>
                         <p class="section-subheader">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at
